افزودن کامند ها و eventStore

--- a/Post.Cmd/Post.Cmd.Api/appsettings.json
+++ b/Post.Cmd/Post.Cmd.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDbSettings": {
+    "Host": "mongodb:://localhost",
+    "Port": 27017,
+    "DatabaseName": "SocialMedia",
+    "CollectionName": "EventStore"
+  }
 }
