--- a/SM-Post/Post.Cmd/Post.Cmd.Api/appsettings.json
+++ b/SM-Post/Post.Cmd/Post.Cmd.Api/appsettings.json
@@ -11,5 +11,11 @@
     "Port": 27017,
     "DatabaseName": "SocialMedia",
     "CollectionName": "EventStore"
+  },
+  "KafkaSettings": {
+    "Host": "localhost",
+    "Port": 9092,
+    "GroupId": "PostCmdGroup",
+    "Topic": "PostCmd"
   }
 }
