--- a/SM-Post/Post.Query/Post.Query.Api/Post.Query.Api.csproj
+++ b/SM-Post/Post.Query/Post.Query.Api/Post.Query.Api.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Post.Query.Domain\Post.Query.Domain.csproj" />
+    <ProjectReference Include="..\Post.Query.Infrastructure\Post.Query.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
