--- a/SM-Post/Post.Query/Post.Query.Api/appsettings.json
+++ b/SM-Post/Post.Query/Post.Query.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "cns": "Server=.;Database=SocialMedia;User Id=SMUser;Password=1qaz!QAZ;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
+  }
 }
