افزودن consumer ها

--- a/SM-Post/Post.Query/Post.Query.Api/appsettings.json
+++ b/SM-Post/Post.Query/Post.Query.Api/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "cns": "Server=.;Database=SocialMedia;User Id=SMUser;Password=1qaz!QAZ;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
+  },
+  "ConsumerSettings": {
+    "GroupId": "SM_Consumer",
+    "Host": "local",
+    "Port": 9092,
+    "AutoOffsetReser": "Earliest",
+    "AllowAutoCreateTopcs": true
   }
 }
