تست ای پی آی های کامند

--- a/SM-Post/Post.Cmd/Post.Cmd.Api/appsettings.json
+++ b/SM-Post/Post.Cmd/Post.Cmd.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "MongoDbSettings": {
-    "Host": "mongodb:://localhost",
+    "Host": "mongodb://localhost",
     "Port": 27017,
     "DatabaseName": "SocialMedia",
     "CollectionName": "EventStore"
