--- a/SM-Post/Post.Query/Post.Query.Api/appsettings.json
+++ b/SM-Post/Post.Query/Post.Query.Api/appsettings.json
@@ -11,9 +11,10 @@
   },
   "ConsumerSettings": {
     "GroupId": "SM_Consumer",
-    "Host": "local",
+    "Host": "localhost",
+    "EnableAutoCommit": false,
     "Port": 9092,
-    "AutoOffsetReser": "Earliest",
-    "AllowAutoCreateTopcs": true
+    "AutoOffsetReset": "Earliest",
+    "AllowAutoCreateTopics": true
   }
 }
