افزودن ای پی ای برای ساخت مجدد پایگاه داده read

--- a/SM-Post/Post.Query/Post.Query.Api/appsettings.json
+++ b/SM-Post/Post.Query/Post.Query.Api/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cns": "Server=.;Database=SocialMedia;User Id=SMUser;Password=1qaz!QAZ;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
+    "SqlServer": "Server=.;Database=SocialMedia;User Id=SMUser;Password=1qaz!QAZ;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False",
+    "Postgres": "Host=localhost;Port=5432;Database=SocialMedia;User Id=postgres;Password=1qaz!QAZ"
   },
   "ConsumerSettings": {
     "GroupId": "SM_Consumer",
