--- a/SM-Post/Post.Query/Post.Query.Api/Properties/launchSettings.json
+++ b/SM-Post/Post.Query/Post.Query.Api/Properties/launchSettings.json
@@ -8,7 +8,8 @@
       "applicationUrl": "http://localhost:5072",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "KAFKA_TOPIC": "SocialMediaPostEvents"
+        "KAFKA_TOPIC": "SocialMediaPostEvents",
+        "DATABASE_PROVIDER": "Postgres" //or SqlServer
       }
     },
     "https": {
@@ -18,7 +19,8 @@
       "applicationUrl": "https://localhost:7091;http://localhost:5072",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "KAFKA_TOPIC": "SocialMediaPostEvents"
+        "KAFKA_TOPIC": "SocialMediaPostEvents",
+        "DATABASE_PROVIDER": "Postgres" //or SqlServer
       }
     }
   }
